--- a/src/biz.dfch.CS.Appclusive.Scheduler.Public/biz.dfch.CS.Appclusive.Scheduler.Public.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Public/biz.dfch.CS.Appclusive.Scheduler.Public.csproj
@@ -143,6 +143,7 @@
     <Compile Include="ISchedulerPlugin.cs" />
     <Compile Include="ISchedulerPluginData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchedulerPluginBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
