--- a/src/biz.dfch.CS.Appclusive.Scheduler.Public/biz.dfch.CS.Appclusive.Scheduler.Public.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Public/biz.dfch.CS.Appclusive.Scheduler.Public.csproj
@@ -131,8 +131,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppclusivePluginBase.cs" />
     <Compile Include="BaseDto.cs" />
     <Compile Include="AppSettings.cs" />
+    <Compile Include="ContractClassForIAppclusivePlugin.cs" />
+    <Compile Include="IAppclusivePlugin.cs" />
+    <Compile Include="IAppclusivePluginData.cs" />
+    <Compile Include="ISchedulerPlugin.cs" />
+    <Compile Include="ISchedulerPluginData.cs" />
     <Compile Include="NonSerialisableJobResult.cs" />
     <Compile Include="InvocationResultBase.cs" />
     <Compile Include="ContractClassForILogger.cs" />
@@ -142,9 +148,6 @@
     <Compile Include="IConfigurationLoader.cs" />
     <Compile Include="ContractClassForIConfigurationLoader.cs" />
     <Compile Include="JobResult.cs" />
-    <Compile Include="ContractClassForISchedulerPlugin.cs" />
-    <Compile Include="ISchedulerPlugin.cs" />
-    <Compile Include="ISchedulerPluginData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchedulerPluginBase.cs" />
   </ItemGroup>
