--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/biz.dfch.CS.Appclusive.Scheduler.Core.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/biz.dfch.CS.Appclusive.Scheduler.Core.csproj
@@ -202,6 +202,7 @@
     <Compile Include="DefaultPlugin.cs" />
     <Compile Include="PluginLoaderConfigurationFromAppSettingsLoader.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="ProgramHelp.cs" />
     <Compile Include="ScheduledJobsManager.cs" />
     <Compile Include="ScheduledJobsManagerImpl.cs" />
     <Compile Include="ScheduledTaskWorkerConfigurationLoader.cs" />
