--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core.Tests/biz.dfch.CS.Appclusive.Scheduler.Core.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core.Tests/biz.dfch.CS.Appclusive.Scheduler.Core.Tests.csproj
@@ -164,6 +164,7 @@
       <HintPath>..\packages\biz.dfch.CS.Appclusive.Public.2.8.3\lib\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Spatial">
       <HintPath>..\packages\System.Spatial.5.6.4\lib\net40\System.Spatial.dll</HintPath>
       <Private>True</Private>
@@ -194,6 +195,7 @@
     <Compile Include="DefaultPluginTest.cs" />
     <Compile Include="PluginLoaderConfigurationFromAppSettingsLoaderTest.cs" />
     <Compile Include="ProgramHelpTest.cs" />
+    <Compile Include="ProgramTest.cs" />
     <Compile Include="ScheduledJobsManagerTest.cs" />
     <Compile Include="ScheduledTaskWorkerConfigurationLoaderTest.cs" />
     <Compile Include="ScheduledTaskWorkerConfigurationTest.cs" />
