--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
@@ -19,6 +19,8 @@
     <!--<add key="Uri" value="http://appclusive"/>-->
     <!--<add key="Uri" value="http://localhost:53422" />-->
     <add key="Uri" value="http://172.19.115.33/Appclusive/" />
+    <add key="ExtensionsFolder" value="..\..\..\biz.dfch.CS.Appclusive.Scheduler.Extensions\bin\Debug" />
+    <add key="PluginTypes" value="*" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
