--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/log4net.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/log4net.config
@@ -13,8 +13,8 @@
       <rollingStyle value="Size" />
       <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <header value="[Header] " />
-        <footer value="[Footer] " />
+        <header value="[Header]" />
+        <footer value="[Footer]" />
         <conversionPattern value="%date\%level|%message%newline" />
       </layout>
     </appender>
@@ -26,8 +26,8 @@
       <!-- An alternate output encoding can be specified -->
       <!-- <encoding value="unicodeFFFE" /> -->
       <layout type="log4net.Layout.PatternLayout">
-        <header value="[Header] " />
-        <footer value="[Footer] " />
+        <header value="[Header]" />
+        <footer value="[Footer]" />
         <conversionPattern value="%date [%thread] %-5level %logger [%ndc] &lt;%property{auth}&gt; - %message%newline" />
       </layout>
       <!-- Alternate layout using XML			
@@ -35,8 +35,8 @@
     </appender>
     <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <header value="[Header] " />
-        <footer value="[Footer] " />
+        <header value="[Header]" />
+        <footer value="[Footer]" />
         <conversionPattern value="[%thread] %-5level %logger [%ndc] &lt;%property{auth}&gt; - %message%newline" />
       </layout>
       <!-- Alternate layout using XML			
@@ -44,7 +44,7 @@
     </appender>
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date|%level|%logger|%message%newline" />
+        <conversionPattern value="%date|%level|%message%newline" />
       </layout>
     </appender>
     <appender name="NetSendAppender" type="log4net.Appender.NetSendAppender">
@@ -52,7 +52,7 @@
       <server value="SQUARE" />
       <recipient value="nicko" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />
+        <conversionPattern value="%date|%level|%message%newline" />
       </layout>
     </appender>
     <!-- Example of how to configure the AdoNetAppender		
