--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/biz.dfch.CS.Appclusive.Scheduler.Core.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/biz.dfch.CS.Appclusive.Scheduler.Core.csproj
@@ -201,8 +201,8 @@
     <Compile Include="ProgramHelp.cs" />
     <Compile Include="ScheduledJobsManager.cs" />
     <Compile Include="ScheduledJobsManagerImpl.cs" />
-    <Compile Include="ScheduledTaskWorkerConfigurationLoader.cs" />
-    <Compile Include="ScheduledTaskWorkerConfiguration.cs" />
+    <Compile Include="ScheduledJobsWorkerConfigurationLoader.cs" />
+    <Compile Include="ScheduledJobsWorkerConfiguration.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -210,8 +210,8 @@
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
     <Compile Include="ScheduledTaskParameters.cs" />
-    <Compile Include="ScheduledTaskWorker.cs" />
-    <Compile Include="ScheduledTask.cs" />
+    <Compile Include="ScheduledJobsWorker.cs" />
+    <Compile Include="ScheduledJobScheduler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScheduledTaskWorkerTimerFactory.cs" />
