--- a/src/biz.dfch.CS.Appclusive.Scheduler.Public/packages.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Public/packages.config
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="biz.dfch.CS.Appclusive.Api" version="2.8.0" targetFramework="net46" />
   <package id="biz.dfch.CS.Appclusive.Public" version="2.9.0" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net46" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net46" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net46" />
+  <package id="Microsoft.Data.Services" version="5.6.4" targetFramework="net46" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net46" />
 </packages>
