--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions/biz.dfch.CS.Appclusive.Scheduler.Extensions.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions/biz.dfch.CS.Appclusive.Scheduler.Extensions.csproj
@@ -155,6 +155,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\biz.dfch.CS.Appclusive.Public.2.9.0\lib\System.Net.Http.Formatting.dll</HintPath>
@@ -180,7 +181,10 @@
   <ItemGroup>
     <Compile Include="ActivitiPlugin.cs" />
     <Compile Include="ActivitiPluginConfiguration.cs" />
+    <Compile Include="ActivitiPluginConfigurationManager.cs" />
     <Compile Include="ActivitiPluginInvokeParameters.cs" />
+    <Compile Include="ActivitiPluginConfigurationManagementUri.cs" />
+    <Compile Include="SchedulerAppSettings.cs" />
     <Compile Include="PowerShellScriptPlugin.cs" />
     <Compile Include="PowerShellScriptPluginConfiguration.cs" />
     <Compile Include="ProgrammePluginConfiguration.cs" />
@@ -199,6 +203,7 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
