--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions/packages.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions/packages.config
@@ -3,7 +3,8 @@
   <package id="biz.dfch.CS.Activiti.Client" version="1.1.1" targetFramework="net46" />
   <package id="biz.dfch.CS.Appclusive.Api" version="2.8.0" targetFramework="net46" />
   <package id="biz.dfch.CS.Appclusive.Public" version="2.9.0" targetFramework="net46" />
-  <package id="biz.dfch.CS.System.Utilities" version="2.0.0" targetFramework="net45" />
+  <package id="biz.dfch.CS.System.Utilities" version="2.0.1" targetFramework="net46" />
+  <package id="log4net" version="2.0.5" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net46" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net46" />
